Closed
Bug 1118084
Opened 10 years ago
Closed 10 years ago
Remove self-hosted and user-exposed methods from PJS
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla37
People
(Reporter: shu, Assigned: shu)
References
Details
(Keywords: dev-doc-complete, site-compat)
Attachments
(1 file)
56.17 KB,
patch
|
lth
:
review+
|
Details | Diff | Splinter Review |
This should be all the entry points into PJS code.
Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8544315 -
Flags: review?(lhansen)
Comment 2•10 years ago
|
||
My only concern here is that the scatter method of TypedObject array is being removed. Given how carefully it's done I assume it's deliberate; was it introduced solely because of PJS?
Flags: needinfo?(shu)
Assignee | ||
Comment 4•10 years ago
|
||
(In reply to Lars T Hansen [:lth] from comment #2)
> My only concern here is that the scatter method of TypedObject array is
> being removed. Given how carefully it's done I assume it's deliberate; was
> it introduced solely because of PJS?
Yes, I consulted with Niko and confirmed that scatter was PJS-only, while the other array methods were not.
Flags: needinfo?(shu)
Assignee | ||
Updated•10 years ago
|
Assignee: nobody → shu
Updated•10 years ago
|
Attachment #8544315 -
Flags: review?(lhansen) → review+
Comment 5•10 years ago
|
||
Note that when you land this, one test that use scatter without a correct guard will start to fail, the test needs to be rewritten or disabled:
/home/lth/moz/mozilla-inbound/js/src/jit-test/tests/ion/inlining/TypedObject-TypeDescrIsSizedArrayType.js:29:11 TypeError: v.scatter is not a function
Assignee | ||
Comment 6•10 years ago
|
||
(In reply to Lars T Hansen [:lth] from comment #5)
> Note that when you land this, one test that use scatter without a correct
> guard will start to fail, the test needs to be rewritten or disabled:
>
> /home/lth/moz/mozilla-inbound/js/src/jit-test/tests/ion/inlining/TypedObject-
> TypeDescrIsSizedArrayType.js:29:11 TypeError: v.scatter is not a function
Yeah, this patch removes that test.
Comment 7•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Updated•10 years ago
|
Keywords: dev-doc-needed,
site-compat
Comment 8•10 years ago
|
||
Added to the compat doc: https://developer.mozilla.org/en-US/Firefox/Releases/37/Site_Compatibility
Keywords: dev-doc-needed → dev-doc-complete
You need to log in
before you can comment on or make changes to this bug.
Description
•