Bug 1118084 - Remove self-hosted and user-exposed PJS methods. (r=lth)